# airlinesAPI-cpp

./: .gitignore  CMakeLists.txt  Installing the connector.txt  README.md  check_dependencies.sh  config.json  config.json.preset  configPreset.json
include/config/: Config.h
include/controllers/: AircraftController.h  AuthController.h  CrewController.h  CrewMemberController.h  FlightController.h  HealthController.h
include/database/: DBConnectionPool.h
include/middleware/: AuthMiddleware.h  Validator.h
include/services/: ReportService.h  SceduleService.h
include/utils/: DateFormat.h  JWTUtils.h  Logger.h
src/: main.cpp
src/config/: Config.cpp
src/controllers/: AircraftController.cpp  AuthController.cpp  CrewController.cpp  CrewMemberController.cpp  FlightController.cpp  HealthController.cpp
src/database/: DBConnectionPool.cpp
src/middleware/: AuthMiddleware.cpp
src/utils/: DateFormat.cpp  JWTUtils.cpp  Logger.cpp
